<resources>
    <string name="app_name">MetaShot</string>

    <!-- ALL BUTTONS -->
    <string name="shooting_new">Create New \nShooting Record</string>
    <string name="shooting_view">View Previous \nShooting Record</string>
    <string name="inventory">View/Edit Weapon \nInventory</string>
    <string name="hunting_mode">Hunting Mode \n(Coming Soon)</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="addWeapon">Add Weapon</string>
    <string name="updateWeapon">Update</string>
    <string name="autoRecord">Automatically Record Shots</string>
    <string name="manualCreate">Manually Create Shots</string>
    <string name="save">Save</string>
    <string name="bullseye">BULLSEYE</string>
    <string name="analyze">Analyze</string>
    <string name="connect">Connect</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>

    <!-- Input field hints -->
    <string name="recordNameHint">Name of Record</string>
    <string name="rangeDistHint">Range (ex: 100 yards)</string>
    <string name="gpsHint">GPS Location</string>
    <string name="weatherHint">Weather</string>
    <string name="detailsHint">Other Details</string>
    <string name="nicknameHint">Weapon Nickname</string>
    <string name="barrelTempHint">Temperature</string>
    <string name="distInputHint">inches</string>
    <string name="metawearHint">Metawear Mac Address</string>

    <!-- Text Labels -->
    <string name="inventoryHeader">Weapon Inventory:</string>
    <string name="shootingHeader">Previous Shooting Records:</string>
    <string name="previousShotRecordsHeader">Shot Records:</string>
    <string name="barrelTemp">Barrel Temperature:</string>
    <string name="verticalDist">Vertical Distance From Target Center:</string>
    <string name="horizontalDist">Horizontal Distance From Target Center:</string>
    <string name="xyDist">Distance From Target Center:</string>
    <string name="shotNumber">Shot Number:</string>
    <string name="shootingTitle">Title:</string>
    <string name="date">Date:</string>
    <string name="rangeDist">Range:</string>
    <string name="weaponType">Weapon Used:</string>
    <string name="location">Location:</string>
    <string name="weather">Weather:</string>
    <string name="description">Description:</string>

    <!-- Radio Buttons -->
    <string name="horizontalLeft">Left of Center</string>
    <string name="horizontalRight">Right of Center</string>
    <string name="verticalAbove">Above Center</string>
    <string name="verticalBelow">Below Center</string>

    <!-- Alert Text -->
    <string name="alertOK">OK</string>
    <string name="distTitle">ERROR!</string>
    <string name="distMessage">Distance cannot be blank or less than 0. \n\nPlease, try again.</string>
    <string name="bullseyeTitle">Wow!</string>
    <string name="bullseyeMessage">Great Shot!</string>
    <string name="noRadioTitle">Oops!</string>
    <string name="noRadioMessage">%1$s orientation is missing. To ensure accurate scope adjustment analysis, please select either \"%2$s\" or \"%3$s\". \nThank you!</string>
    <string name="showShotRecordTitle">%1$s %2$s</string>
    <string name="showShotRecordMessage">%1$s %2$s \n\n%3$s\n   %4$s</string>
    <string name="insufShotCountTitle">Sorry!</string>
    <string name="insufShotCountMessage">We recommend recording at least 5 shots before adjusting the scope.\n\nPlease, fire more shots and try again.</string>
    <string name="adjustScopeTitle">Recommended Scope Adjustments</string>
    <string name="adjustScopeMessage">%1$s\n%2$s</string>
    <string name="noScopeAdjustTitle">Your Scope Is Zeroed In!</string>
    <string name="noScopeAdjustMessage">No adjustments needed.</string>

    <!-- Other -->
    <string name="recordNameDefault">Default</string>
    <string name="shootingRecordInputDefault">Not Specified</string>
    <string name="noWeapon">No Weapon Selected</string>
    <string name="showXYDist">%1$s\n %2$s</string>
    <string name="adjustScopeUp">Adjust scope up %1$s clicks.</string>
    <string name="adjustScopeDown">Adjust scope down %1$s clicks.</string>
    <string name="adjustScopeLeft">Adjust scope left %1$s clicks.</string>
    <string name="adjustScopeRight">Adjust scope right %1$s clicks.</string>

</resources>
